Update .gitignore to remove common issues

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
+# OS / System
+.DS_Store
+Thumbs.db
+ehthumbs.db
+desktop.ini
+*.swp
+*.swo
+*.bak
+*.tmp
+*.log
+
+# IDE / Editors
+.vscode/
+.idea/
+*.code-workspace
+*.sublime-*
+*.iml
+
+# Logs / Misc
+*.env
+.env.*
+!.env.example
+*.local
+*.cache/
+.cache/
+*.pid
+*.sqlite3
+*.db
+*.lock
+
 # Compiled Lua sources
 luac.out
 
@@ -41,3 +71,20 @@ luac.out
 
 # AI
 GEMINI.md
+CLAUDE.md
+CLAUDE/
+*.prompt.md
+*.completion.txt
+chat_logs/
+agent_memory/
+llm_cache/
+.openrouter/
+.aider/
+.continue/
+.cache/continue/
+codellama/
+promptgen/
+*.llm.*
+*.llm-cache
+*.llm-out
+*.generated.*
