fix: move ssh.list outside of plugin dir
Move to yazi main directory.
This fixes issues with updating the plugin due to user manual edits of
the sshfs.list

--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,11 @@ luac.out
 # AI
 GEMINI.md
 CLAUDE.md
-CLAUDE/
+QWEN.md
+*.ai.md
+.claude
+.gemini
+.qwen
 *.prompt.md
 *.completion.txt
 chat_logs/
